VZDEV/src/objects/LOG_LogMessage__c.object
<CustomObject>
    <description>Container for custom exception/log messages</description>
    <fields>
        <fullName>CCPM_age__c</fullName>
        <description>Age in Days</description>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age in Days</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_debugLevel__c</fullName>
        <description>Debug Level</description>
        <label>Debug Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_integrationPayload__c</fullName>
        <description>If log is integration related show xml payload</description>
        <inlineHelpText>If log is integration related show xml payload</inlineHelpText>
        <label>Integration Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_logCode__c</fullName>
        <description>The exception error code of custom org code for record</description>
        <inlineHelpText>The exception error code of custom org code for record</inlineHelpText>
        <label>Log Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_logDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_message__c</fullName>
        <description>Message to log</description>
        <inlineHelpText>Message to log</inlineHelpText>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_referenceId__c</fullName>
        <description>The related record Id</description>
        <inlineHelpText>The related record Id</inlineHelpText>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_referenceInfo__c</fullName>
        <description>The related record info (e.g. Apex Batch Job Id, Contact etc)</description>
        <inlineHelpText>The related record info (e.g. Apex Batch Job Id, Contact etc)</inlineHelpText>
        <label>Reference Info</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_sourceFunction__c</fullName>
        <description>The originating function in the class/component</description>
        <inlineHelpText>The originating function in the class/component</inlineHelpText>
        <label>Source Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_source__c</fullName>
        <description>The originating class/component of log message</description>
        <inlineHelpText>The originating component of log message</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_stackTrace__c</fullName>
        <description>Raw exception stack trace for unhandled errors</description>
        <inlineHelpText>Raw exception stack trace for unhandled errors</inlineHelpText>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_timer__c</fullName>
        <description>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</description>
        <inlineHelpText>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</inlineHelpText>
        <label>ExecutionTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>error_Log_today</fullName>
        <columns>NAME</columns>
        <columns>CCPM_source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CCPM_message__c</columns>
        <columns>CCPM_sourceFunction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/5/2018 9:02 AM</value>
        </filters>
        <filters>
            <field>CCPM_source__c</field>
            <operation>startsWith</operation>
            <value>CCPM_</value>
        </filters>
        <label>error Log today</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Message #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>